--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
             <li><a class="fta" href="#">Project</a></li>
         </ul>
         <div class="sicons">
-            <img class="icons" src="icon-facebook.svg" alt="Icon for Facebook">
-            <img class="icons" src="icon-instagram.svg" alt="Icon for Instagram">
-            <img class="icons" src="icon-twitter.svg" alt="Icon for Twitter">
-            <img class="icons" src="icon-pinterest.svg" alt="Icon for Pinterest">
+            <a class="aicons" href="#"><img class="icons" src="icon-facebook.svg" alt="Icon for Facebook"></a>
+            <a class="aicons" href="https://www.instagram.com/judethewildcard" target="_blank"><img class="icons" src="icon-instagram.svg" alt="Icon for Instagram"></a>
+            <a class="aicons" href="https://www.twitter.com/judethewildcard" target="_blank"><img class="icons" src="icon-twitter.svg" alt="Icon for Twitter"></a>
+            <a class="aicons" href="#"><img class="icons" src="icon-pinterest.svg" alt="Icon for Pinterest"></a>
         </div>
     </footer>
 </body>
